# sit_backend

./: .gitignore  README.md  manage.py  pyproject.toml  pyproject.toml.backup  requirements.txt  setup.cfg  test.py
.github/workflows/: django.yml
apps/sit_ble_devices/: apps.py  bootstrap.py  consumers.py  models.py  premissions.py  routing.py  serializers.py  urls.py  views.py
apps/sit_ble_devices/adapters/: consumers.py
apps/sit_ble_devices/domain/: commands.py  events.py
apps/sit_ble_devices/handler/: __init__.py
apps/sit_ble_devices/migrations/: 0001_initial.py  0002_rename_distancemeasureings_distancemeasurement.py  0003_rename_simple distance_distancemeasurement_distance.py  0004_measurementtestsettings_measurementtest_and_more.py  0005_alter_measurementtest_test_settings.py  0006_measurementtestsettings_test_distance_and_more.py  0007_measurementtest_comments.py  0008_rename_measurementtestsettings_devicetestgroups_and_more.py  0009_rename_test_settings_devicetests_test_group.py  0010_alter_devicetests_test_group.py  0011_alter_devicetestgroups_options_and_more.py  0012_alter_devicetestgroups_options_and_more.py  0013_devicetestgroups_test_description.py  0014_devicetests_real_test_distance.py  0015_distancemeasurement_recivedsignalstrengthindex_and_more.py  0017_device.py  (+32 more)
apps/sit_devices/: apps.py  consumers.py  routing.py  urls.py  utils.py
apps/sit_ips/: apps.py  urls.py
apps/sit_mesh_devices/: apps.py  consumers.py  routing.py  urls.py  utils.py
apps/sit_settings/: apps.py  models.py  serializers.py  urls.py  views.py
apps/web/: serializers.py  urls.py  views.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py  test.py
juypter/: auswertung.ipynb  gn_test.ipynb  matrix.ipynb  pso.ipynb  pso_test.ipynb  test.ipynb  utils.ipynb
(+53 files in other folders)
